--- a/css/projetos.css
+++ b/css/projetos.css
@@ -5,19 +5,14 @@
   text-align: center;
 }
 
-body {
-  background-size: cover;
- background-image: url(../img/imagemDeFundo.jpg);
-}
-
 .cabecalho {
-  background: rgba(12, 24, 33, 0.4);
-  backdrop-filter: blur(10px);
+  background: #0b0b0d85;
   display: flex;
   justify-content: center;
-  height: 60px;
   align-items: center;
   position: fixed;
+  width: 100%;
+  height: 60px;
   top: 0px;
   right: 0px;
   left: 0px;
@@ -28,20 +23,28 @@ body {
   display: flex;
   gap: 150px;
 }
+
 .botoes-menu {
-  background: #495057;
+  background: #0042FF;
   padding: 15px;
   border-radius: 20px;
   position: relative;
   width: 300px;
 }
 
+.botoes-menu:hover{
+  background: #113A8C;
+}
+
 .botoes-menu .link {
-  color: rgb(230, 52, 98);
+  color: white;
 }
 .link {
   padding: 5px;
-  font-size: 20px;
+  font-size: 1.3rem;
+}
+.link:hover{
+  color: #0ef;
 }
 
 .link::before {
@@ -55,8 +58,9 @@ body {
 
 body {
   background-size: cover;
- background: black;
+ background-image: url(../img/v1016-b-09.jpg);
 }
+
 
 .conteudoPrin {
   margin: auto;
@@ -72,18 +76,4 @@ body {
   color: white;
 }
 
-.conteudoPrin::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  backdrop-filter: blur(10px);
-}
 
-body {
-  background-size: cover;
- background-image: url(../img/imagemDeFundo.jpg);
-}
