--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,13 @@
 }
 
 .cabecalho {
-  background: rgba(12, 24, 33, 0.4);
+  background: #0b0b0d85;
   display: flex;
   justify-content: center;
-  height: 60px;
   align-items: center;
   position: fixed;
+  width: 100%;
+  height: 60px;
   top: 0px;
   right: 0px;
   left: 0px;
@@ -22,20 +23,28 @@
   display: flex;
   gap: 150px;
 }
+
 .botoes-menu {
-  background: #495057;
+  background: #0042FF;
   padding: 15px;
   border-radius: 20px;
   position: relative;
   width: 300px;
 }
 
+.botoes-menu:hover{
+  background: #113A8C;
+}
+
 .botoes-menu .link {
-  color: rgb(230, 52, 98);
+  color: white;
 }
 .link {
   padding: 5px;
-  font-size: 20px;
+  font-size: 1.3rem;
+}
+.link:hover{
+  color: #0ef;
 }
 
 .link::before {
@@ -49,7 +58,7 @@
 
 body {
   background-size: cover;
- background-image: url(../img/imagemDeFundo.jpg);
+ background-image: url(../img/v1016-b-09.jpg);
 }
 
 .conteudoPrin {
@@ -66,16 +75,6 @@ body {
   color: white;
  }
 
-.conteudoPrin::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  backdrop-filter: blur(10px);
-} 
 
 .titulo {
   grid-area: titulo;
@@ -83,7 +82,7 @@ body {
 }
 
 .containerFoto {
-  border: 2px solid rgb(230, 52, 98);
+  border: 4px solid #0042FF;
   width: 250px;
   height: 250px;
   grid-area: foto;
