--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,14 @@
   align-items: center;
   position: fixed;
   width: 100%;
-  height: 60px;
+  height: auto;
   top: 0px;
   right: 0px;
   left: 0px;
+}
+
+.menu{
+  max-width: 100%;
 }
 
 .menu-lista {
@@ -36,14 +40,13 @@
   background: #113a8c;
 }
 
-li a {
-  color: white;
-}
 
 li a {
+  color: white;
   padding: 5px;
   font-size: 1.3rem;
 }
+
 li a:hover {
   color: #0ef;
 }
@@ -73,7 +76,7 @@ body {
     "titulo"
     "foto"
     "texto";
-  gap: 20px;
+  gap: 30px;
   color: white;
 }
 
@@ -83,41 +86,83 @@ body {
 }
 
 .containerFoto {
-  border: 4px solid #0042ff;
   width: 250px;
   height: 250px;
   grid-area: foto;
-  border-radius: 500px;
   justify-self: center;
 }
 
-.foto {
+.containerFoto img {
   width: 100%;
   height: 250px;
   border-radius: 50%;
   grid-area: foto;
+  border: 4px solid #0042ff;
 }
 
 .paragrafo {
   border: 2px solid #0042ff;
-  width: 650px;
+  width: 35%;
   margin: auto;
   grid-area: texto;
   font-size: 1.1rem;
 }
 
+
 .rodape {
-  margin-top: 50px;
+  margin-top: 100px;
   background: #0b0b0d85;
 }
 
-.rodape p {
+.rodape p{
+  color: rgb(71, 90, 92);
 }
+
 
 .texto_pequeno {
   font-size: 0.9rem;
   color: rgb(71, 90, 92);
 }
-@media screen {
+
+@media (max-width: 730px){
+
+  body{
+    width: 97vw;
+  }
+
+  .cabecalho{
+  flex-direction: column;
+  width: 99vw;
+  }
+
+  
+
+  .containerFoto {
+    border: 4px solid #0042ff;
+    width: 300px;
+    height: 300px;
+    grid-area: foto;
+    border-radius: 600px;
+    justify-self: center;
+  }
+
+  .containerFoto img {
+    width: 300;
+    height: 300px;
+    border-radius: 600px;
+    grid-area: foto;
+  }
+  .paragrafo {
+    border: 2px solid #0042ff;
+    width: 400px;
+    margin: auto;
+    font-size: 2rem;
+}
+.paragrafo p{
+  padding: 0px 55px 0px 55px;
+  text-align: center;
+  }
+
+
   
 }
