--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body {
 
 .paragrafo {
   border: 2px solid #0042ff;
-  width: 35%;
+  width: 600px;
   margin: auto;
   grid-area: texto;
   font-size: 1.1rem;
@@ -130,11 +130,64 @@ body {
     width: 97vw;
   }
 
-  .cabecalho{
-  flex-direction: column;
-  width: 99vw;
-  }
+  .cabecalho {
+    background: #0b0b0d85;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: auto;
+    top: 0px;
+    right: 0px;
+    left: 0px;
 
+  }
+  
+  .menu{
+    max-width: 100%;
+  }
+  
+  .menu-lista {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+
+
+    flex-direction: column;
+  }
+  
+  .menu-lista li {
+    background: #0042ff;
+    padding: 15px;
+    border-radius: 20px;
+    position: relative;
+    width: 300px;
+  }
+  
+  .menu-lista li:hover {
+    background: #113a8c;
+  }
+  
+  
+  li a {
+    color: white;
+    padding: 5px;
+    font-size: 1.3rem;
+  }
+  
+  li a:hover {
+    color: #0ef;
+  }
+  
+  li a::before {
+    content: "";
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    bottom: -10px;
+    left: -10px;
+  }
   
 
   .containerFoto {
