--- a/css/style.css
+++ b/css/style.css
@@ -139,8 +139,8 @@ body {
     width: 100%;
     height: auto;
     top: 0px;
-    right: 0px;
-    left: 0px;
+    right: 10px;
+    left: 10px;
 
   }
   
@@ -152,9 +152,8 @@ body {
     list-style: none;
     display: flex;
     gap: 15px;
-
-
     flex-direction: column;
+    margin-top: 50px;
   }
   
   .menu-lista li {
@@ -207,12 +206,12 @@ body {
   }
   .paragrafo {
     border: 2px solid #0042ff;
-    width: 400px;
+    width: 350px;
     margin: auto;
     font-size: 2rem;
 }
 .paragrafo p{
-  padding: 0px 55px 0px 55px;
+  padding: 0px 25px 0px 25px;
   text-align: center;
   }
 
